// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthPicker disabled 1`] = `
<styled.div>
  <styled.div
    isActive={true}
    isDisabled={false}
    key="Январь"
    onClick={[Function]}
  >
    Январь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Февраль"
    onClick={[Function]}
  >
    Февраль
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Март"
    onClick={[Function]}
  >
    Март
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={true}
    key="Апрель"
    onClick={[Function]}
  >
    Апрель
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Май"
    onClick={[Function]}
  >
    Май
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Июнь"
    onClick={[Function]}
  >
    Июнь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Июль"
    onClick={[Function]}
  >
    Июль
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Август"
    onClick={[Function]}
  >
    Август
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Сентябрь"
    onClick={[Function]}
  >
    Сентябрь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Октябрь"
    onClick={[Function]}
  >
    Октябрь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Ноябрь"
    onClick={[Function]}
  >
    Ноябрь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Декабрь"
    onClick={[Function]}
  >
    Декабрь
  </styled.div>
</styled.div>
`;

exports[`MonthPicker does not crash 1`] = `
<styled.div>
  <styled.div
    isActive={true}
    isDisabled={false}
    key="Январь"
    onClick={[Function]}
  >
    Январь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Февраль"
    onClick={[Function]}
  >
    Февраль
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Март"
    onClick={[Function]}
  >
    Март
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Апрель"
    onClick={[Function]}
  >
    Апрель
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Май"
    onClick={[Function]}
  >
    Май
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Июнь"
    onClick={[Function]}
  >
    Июнь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Июль"
    onClick={[Function]}
  >
    Июль
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Август"
    onClick={[Function]}
  >
    Август
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Сентябрь"
    onClick={[Function]}
  >
    Сентябрь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Октябрь"
    onClick={[Function]}
  >
    Октябрь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Ноябрь"
    onClick={[Function]}
  >
    Ноябрь
  </styled.div>
  <styled.div
    isActive={false}
    isDisabled={false}
    key="Декабрь"
    onClick={[Function]}
  >
    Декабрь
  </styled.div>
</styled.div>
`;
